# Online-course-management-system

./: .Dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  makefile  pyproject.toml  requirements.txt
access/: models.py
access/migrations/: 0001_initial.py
api/: permissions.py  urls.py
api/auth/: serializers.py  urls.py  views.py
api/auth/token/: serializers.py  views.py
api/comments/: serializers.py  urls.py  views.py
api/courses/: filters.py  querysets.py  serializers.py  urls.py  views.py
api/grade/: filters.py  querysets.py  serializers.py  urls.py  views.py
api/homework/: filters.py  querysets.py  serializers.py  urls.py  views.py
api/lectures/: filters.py  querysets.py  serializers.py  urls.py  views.py
api/notifications/: serializers.py  urls.py  views.py
api/submission/: filters.py  querysets.py  serializers.py  urls.py  views.py
common/: models.py
content/: admin.py  managers.py  models.py
content/scripts/: populate_db.py  query.py
project/: environment.py  settings.py  urls.py
schema/: serializers.py
schema/auth/: schemas.py
schema/comments/: schemas.py
schema/courses/: schemas.py
schema/grades/: schemas.py
schema/homework/: schemas.py
schema/lectures/: schemas.py
schema/notifications/: __init__.py  schemas.py
schema/submission/: schemas.py
service/: comments.py  courses.py  grades.py  homework.py  lectures.py  notifications.py  submissions.py
