[project]
name = "final-project"
version = "0.1.0"
description = "Final Project for LeverX"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.0.1",
    "Django>=5.2.5",
    "django-environ>=0.12.0",
    "django-extensions>=4.1",
    "django-filter>=24.3",
    "django-silk>=5.4.1",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.28.0",
    "psycopg2-binary>=2.9.10",
    "whitenoise>=6.9.0",
    "pytest>=8.3.0",
    "pytest-django>=4.8.0",
    "pytest-cov>=5.0.0",
    "factory-boy>=3.3.0",
]

[tool.uv]
dev-dependencies = []  
